demo_raw/raw_ui.mojo


fn uiSliderSetValue(s: SliderPtr, value: c_int):
    external_call["uiSliderSetValue", NoneType](s, value)

fn uiSliderOnChanged(s: SliderPtr, f: OnSliderChangeFn, data: VoidPtr):
    external_call["uiSliderOnChanged", NoneType](s, f, data)

# --- ProgressBar Functions ---
fn uiNewProgressBar() -> ProgressPtr:
    return external_call["uiNewProgressBar", ProgressPtr]()

fn uiProgressBarValue(p: ProgressPtr) -> c_int:
    return external_call["uiProgressBarValue", c_int](p)

fn uiProgressBarSetValue(p: ProgressPtr, n: c_int):
    external_call["uiProgressBarSetValue", NoneType](p, n)

# --- Combobox Functions ---
fn uiNewCombobox() -> ComboPtr:
    return external_call["uiNewCombobox", ComboPtr]()

fn uiComboboxAppend(c: ComboPtr, text: CharPtr):
    external_call["uiComboboxAppend", NoneType](c, text)

fn uiComboboxSelected(c: ComboPtr) -> c_int:
    return external_call["uiComboboxSelected", c_int](c)

fn uiComboboxSetSelected(c: ComboPtr, n: c_int):
    external_call["uiComboboxSetSelected", NoneType](c, n)

fn uiComboboxOnSelected(c: ComboPtr, f: OnComboSelectedFn, data: VoidPtr):
    external_call["uiComboboxOnSelected", NoneType](c, f, data)

# --- Editable Combobox Functions ---
fn uiNewEditableCombobox() -> EditComboPtr:
    return external_call["uiNewEditableCombobox", EditComboPtr]()

fn uiEditableComboboxAppend(c: EditComboPtr, text: CharPtr):
    external_call["uiEditableComboboxAppend", NoneType](c, text)

fn uiEditableComboboxText(c: EditComboPtr) -> MutCharPtr:
    return external_call["uiEditableComboboxText", MutCharPtr](c)

fn uiEditableComboboxSetText(c: EditComboPtr, text: CharPtr):
    external_call["uiEditableComboboxSetText", NoneType](c, text)

fn uiEditableComboboxOnChanged(c: EditComboPtr, f: OnEditComboChangedFn, data: VoidPtr):
    external_call["uiEditableComboboxOnChanged", NoneType](c, f, data)

# --- RadioButtons Functions ---
fn uiNewRadioButtons() -> RadioPtr:
    return external_call["uiNewRadioButtons", RadioPtr]()

fn uiRadioButtonsAppend(r: RadioPtr, text: CharPtr):
    external_call["uiRadioButtonsAppend", NoneType](r, text)

fn uiRadioButtonsSelected(r: RadioPtr) -> c_int:
    return external_call["uiRadioButtonsSelected", c_int](r)

fn uiRadioButtonsSetSelected(r: RadioPtr, n: c_int):
    external_call["uiRadioButtonsSetSelected", NoneType](r, n)

fn uiRadioButtonsOnSelected(r: RadioPtr, f: OnRadioSelectedFn, data: VoidPtr):
    external_call["uiRadioButtonsOnSelected", NoneType](r, f, data)

# --- Separator Functions ---
fn uiNewHorizontalSeparator() -> SepPtr:
    return external_call["uiNewHorizontalSeparator", SepPtr]()

fn uiNewVerticalSeparator() -> SepPtr:
    return external_call["uiNewVerticalSeparator", SepPtr]()

# --- Group Functions ---
fn uiNewGroup(title: CharPtr) -> GroupPtr:
    return external_call["uiNewGroup", GroupPtr](title)

fn uiGroupTitle(g: GroupPtr) -> MutCharPtr:
    return external_call["uiGroupTitle", MutCharPtr](g)

fn uiGroupSetTitle(g: GroupPtr, title: CharPtr):
    external_call["uiGroupSetTitle", NoneType](g, title)

fn uiGroupSetChild(g: GroupPtr, child: VoidPtr):
    external_call["uiGroupSetChild", NoneType](g, child)

fn uiGroupMargined(g: GroupPtr) -> c_int:
    return external_call["uiGroupMargined", c_int](g)

fn uiGroupSetMargined(g: GroupPtr, margined: c_int):
    external_call["uiGroupSetMargined", NoneType](g, margined)

# --- Tab Functions ---
fn uiNewTab() -> TabPtr:
    return external_call["uiNewTab", TabPtr]()

fn uiTabAppend(t: TabPtr, name: CharPtr, c: VoidPtr):
    external_call["uiTabAppend", NoneType](t, name, c)

fn uiTabInsertAt(t: TabPtr, name: CharPtr, before: c_int, c: VoidPtr):
    external_call["uiTabInsertAt", NoneType](t, name, before, c)

fn uiTabDelete(t: TabPtr, index: c_int):
    external_call["uiTabDelete", NoneType](t, index)

fn uiTabNumPages(t: TabPtr) -> c_int:
    return external_call["uiTabNumPages", c_int](t)

fn uiTabMargined(t: TabPtr, page: c_int) -> c_int:
    return external_call["uiTabMargined", c_int](t, page)

fn uiTabSetMargined(t: TabPtr, page: c_int, margined: c_int):
    external_call["uiTabSetMargined", NoneType](t, page, margined)

# --- Grid Functions ---
fn uiNewGrid() -> GridPtr:
    return external_call["uiNewGrid", GridPtr]()

fn uiGridAppend(g: GridPtr, c: VoidPtr, left: c_int, top: c_int, 
                xspan: c_int, yspan: c_int, hexpand: c_int, 
                halign: c_int, vexpand: c_int, valign: c_int):
    external_call["uiGridAppend", NoneType](g, c, left, top, xspan, yspan, hexpand, halign, vexpand, valign)

fn uiGridInsertAt(g: GridPtr, c: VoidPtr, existing: VoidPtr, at: c_int,
                  xspan: c_int, yspan: c_int, hexpand: c_int,
                  halign: c_int, vexpand: c_int, valign: c_int):
    external_call["uiGridInsertAt", NoneType](g, c, existing, at, xspan, yspan, hexpand, halign, vexpand, valign)

fn uiGridPadded(g: GridPtr) -> c_int:
    return external_call["uiGridPadded", c_int](g)

fn uiGridSetPadded(g: GridPtr, padded: c_int):
    external_call["uiGridSetPadded", NoneType](g, padded)

# --- Multiline Entry Functions ---
fn uiNewMultilineEntry() -> MultiEntryPtr:
    return external_call["uiNewMultilineEntry", MultiEntryPtr]()

fn uiNewNonWrappingMultilineEntry() -> MultiEntryPtr:
    return external_call["uiNewNonWrappingMultilineEntry", MultiEntryPtr]()

fn uiMultilineEntryText(e: MultiEntryPtr) -> MutCharPtr:
    return external_call["uiMultilineEntryText", MutCharPtr](e)

fn uiMultilineEntrySetText(e: MultiEntryPtr, text: CharPtr):
    external_call["uiMultilineEntrySetText", NoneType](e, text)

fn uiMultilineEntryAppend(e: MultiEntryPtr, text: CharPtr):
    external_call["uiMultilineEntryAppend", NoneType](e, text)

fn uiMultilineEntryOnChanged(e: MultiEntryPtr, f: OnMultiEntryChangeFn, data: VoidPtr):
    external_call["uiMultilineEntryOnChanged", NoneType](e, f, data)

fn uiMultilineEntryReadOnly(e: MultiEntryPtr) -> c_int:
    return external_call["uiMultilineEntryReadOnly", c_int](e)

fn uiMultilineEntrySetReadOnly(e: MultiEntryPtr, readonly: c_int):
    external_call["uiMultilineEntrySetReadOnly", NoneType](e, readonly)

# --- Form Functions ---
fn uiNewForm() -> FormPtr:
    return external_call["uiNewForm", FormPtr]()

fn uiFormAppend(f: FormPtr, label: CharPtr, c: VoidPtr, stretchy: c_int):
    external_call["uiFormAppend", NoneType](f, label, c, stretchy)

fn uiFormDelete(f: FormPtr, index: c_int):
    external_call["uiFormDelete", NoneType](f, index)

fn uiFormPadded(f: FormPtr) -> c_int:
    return external_call["uiFormPadded", c_int](f)

fn uiFormSetPadded(f: FormPtr, padded: c_int):
    external_call["uiFormSetPadded", NoneType](f, padded)

fn uiFormNumChildren(f: FormPtr) -> c_int:
    return external_call["uiFormNumChildren", c_int](f)

# --- Free Text Function ---
fn uiFreeText(text: MutCharPtr):
    external_call["uiFreeText", NoneType](text)

